# jetson_sender

./: CMakeLists.txt  README.md
include/: app_config.h  app_constants.h  app_support.h  app_types.h  client_transport.h  comms_common.h  comms_runtime.h  eth_comms.h  file_parser.h  logger.h  mavlink_bridge.h  orange_cube_controller.h  parser.h  realsense_capture.h  video_streamer.h
params/: config.txt
scripts/: configure_eth0_static_ip.sh  install_dependencies.sh  install_systemd_service.sh
src/: app_config.cpp  app_support.cpp  client_transport.cpp  comms_common.cpp  comms_runtime.cpp  main.cpp  orange_cube_controller.cpp  realsense_capture.cpp  video_streamer.cpp
